--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
   "type": "commonjs",
   "dependencies": {
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.1.3"
   }
 }
